methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:30: error: not found: value avancer
    avancer()  
    ^